# internal/app/api/handler/handler.go
@@ -14,9 +14,16 @@ type AuthService interface {
 	Auth
 }
 
+type PostService interface {
+	PostSaver
+	PostProvider
+	PostProcessor
+}
+
 type Handler struct {
 	Healthcheck
 	AuthHandler
+	PostHandler
 }
 
 // The response struct is used to send a message back to the client.
@@ -28,6 +35,7 @@ func New(
 	l *slog.Logger,
 	v *validator.Validate,
 	a AuthService,
+	p PostService,
 ) *Handler {
 	return &Handler{
 		Healthcheck{log: l},
@@ -35,6 +43,13 @@ func New(
 			log:      l,
 			validate: v,
 			service:  a,
+		},
+		PostHandler{
+			log:       l,
+			validate:  v,
+			saver:     p,
+			provider:  p,
+			processor: p,
 		},
 	}
 }
@@ -45,12 +60,12 @@ func (h *Handler) Router(ctx context.Context, cfg config.Config) http.Handler {
 	m.Handle("/swagger/", httpSwagger.Handler(httpSwagger.URL("/swagger/doc.json")))
 	m.Handle("GET /health", h.APIHealth())
 	{
-		m.Handle("POST api/auth/register", h.RegisterUser(ctx))
-		m.Handle("POST api/auth/login", h.Login(ctx, cfg.Auth))
+		m.Handle("POST /api/auth/register", h.RegisterUser(ctx))
+		m.Handle("POST /api/auth/login", h.Login(ctx, cfg.Auth))
 	}
 
 	{
-		// m.Handle("POST api/posts", h.CreatePost(ctx))
+		m.Handle("POST /api/posts", h.CreatePost(ctx))
 		// m.Handle("GET api/posts", h.GetPosts(ctx))
 		// m.Handle("GET api/posts/{id}", h.GetPost(ctx))
 		// m.Handle("PUT api/posts/{id}", h.UpdatePost(ctx))
